<resources>
    <string name="app_name">SpotDeal</string>
    <string name="login_btn">Sign in</string>
    <string name="email_et">Email</string>
    <string name="password_et">Password</string>
    <string name="error_wrong_combination">Invalid Email or Password combination</string>
    <string name="error_email">Please enter a valid Email address</string>
    <string name="error_password">Please Enter a Valid Password</string>
    <string name="logout">Log out</string>
    <string name="active">Show Active</string>
    <string name="inactive">Show Inactive</string>
    <string name="valid">Show Valid</string>
    <string name="invalid">Show Invalid</string>
    <string name="all">Show All</string>
    <string name="scan">Scan code</string>
    <string name="deals">Deals</string>
    <string name="history">History</string>
    <string name="status_no_active">No active Deals</string>
    <string name="status_no_inactive">No inactive Deals</string>
    <string name="status_no_valid">No valid Vouchers</string>
    <string name="status_no_invalid">No invalid Vouchers</string>
    <string name="cancel">Cancel</string>
    <string name="logout_dialog">Are you sure you want to Log out?</string>
    <string name="voucher">Voucher:</string>
    <string name="valid_voucher">valid</string>
    <string name="invalid_voucher">invalid</string>
    <string name="swipe_to_complete">Swipe to redeem</string>
    <string name="swipe_to_reopen">Swipe to reopen</string>
    <string name="active_deals">Active Deals</string>
    <string name="inactive_deals">Inactive Deals</string>
    <string name="all_deals">All Deals</string>
    <string name="valid_orders">Valid Vouchers</string>
    <string name="invalid_orders">Invalid Vouchers</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="price">Price</string>
    <string name="create_deal">Create Deal</string>
    <string name="no_history">This device has no history yet!</string>
    <string name="no_customers">You have no customers yet!</string>
    <string name="no_deals">You have no deals yet!</string>
    <string name="camera_access_needed">Camera access permission required</string>
    <string name="setup_failed">Unable to set up preview</string>
    <string name="select_image">Please select an image</string>
    <string name="fill_in_fields">Please fill in all fields</string>
    <string name="could_not_delete">Could not delete… Check if the deal has active orders!</string>
    <string name="no_active_vouchers">Deal has no active vouchers!</string>
    <string name="could_not_edit">Cloud not edit Deal</string>
    <string name="could_not_edit_has_active">Cloud not edit Deal… Check if the deal has active orders!</string>
</resources>
