<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single"
    android:id="@+id/group1">
        <item
                android:id="@+id/nav_scan"
                android:icon="@drawable/ic_camera"
                android:checkable="false"
                android:title="@string/scan"/>
        <item
            android:id="@+id/nav_deal"
            android:icon="@drawable/ic_deal_list"
            android:checkable="false"
            android:title="@string/deals"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:checkable="false"
                android:title="@string/history"/>
    </group>
    <group android:checkableBehavior="single"
    android:id="@+id/group2">
    <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:checkable="false"
            android:title="@string/logout"/>
</group>
</menu>