<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.CreateDealActivity"
        android:id="@+id/create_deal_constraint">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_deal"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"/>

    <EditText
            android:id="@+id/create_deal_name"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar_create_deal"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/name"/>

    <EditText
            android:id="@+id/create_deal_description"
            style="@style/ItalicText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/create_deal_name"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/description"/>

    <ImageView
            android:id="@+id/create_deal_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/common_google_signin_btn_text_light_disabled"
            app:layout_constraintTop_toBottomOf="@id/create_deal_description"
            android:src="@drawable/ic_image"/>

    <GridLayout
            android:id="@+id/create_deal_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/create_deal_image"
            android:columnCount="2"
            android:rowCount="2">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_info"/>

        <EditText
                android:id="@+id/create_deal_info"
                style="@style/ItalicTextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/info"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_price"/>

        <EditText
                android:id="@+id/create_deal_price"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:lines="1"
                android:inputType="numberDecimal"/>
    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_deal_btn"
            android:src="@drawable/ic_add_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:backgroundTint="@color/colorPrimary"
            android:padding="10dp"
            app:borderWidth="0dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
            android:id="@+id/progress_create_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>